[gd_scene load_steps=4 format=3 uid="uid://d2dqo72o68mhj"]

[ext_resource type="Script" uid="uid://c0ey3j0a2xe8" path="res://scripts/game.gd" id="1_78awf"]
[ext_resource type="Script" uid="uid://cgxklci8wjipj" path="res://scripts/chip_8.gd" id="1_ibkli"]
[ext_resource type="FontFile" uid="uid://cstu1l4s5kuhx" path="res://PressStart2P-Regular.ttf" id="3_cpr0p"]

[node name="Game" type="Node2D"]
script = ExtResource("1_78awf")

[node name="Chip8" type="ColorRect" parent="."]
offset_left = 294.0
offset_top = 135.0
offset_right = 294.0
offset_bottom = 135.0
script = ExtResource("1_ibkli")

[node name="ControlBG" type="ColorRect" parent="."]
offset_left = 76.0
offset_top = 113.0
offset_right = 116.16677
offset_bottom = 152.74834
scale = Vector2(3.5850534, 4.478175)
color = Color(0.17891598, 0.3306396, 0.15037087, 0.75686276)

[node name="Label" type="Label" parent="."]
offset_left = 78.0
offset_top = 118.0
offset_right = 219.0
offset_bottom = 141.0
theme_override_fonts/font = ExtResource("3_cpr0p")
theme_override_font_sizes/font_size = 12
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 76.0
offset_top = 13.0
offset_right = 316.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0.5816921, 0.7878352, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("3_cpr0p")
text = "Chip 8 Emulator"

[node name="Label3" type="Label" parent="."]
offset_left = 77.0
offset_top = 46.0
offset_right = 708.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("3_cpr0p")
theme_override_font_sizes/font_size = 9
text = "CHIP-8 is a simple, interpreted programming language and virtual machine created in the 1970s for early microcomputers like the COSMAC VIP, designed for easy game development with its basic instructions, memory, and graphics."
autowrap_mode = 1

[node name="Grid" type="GridContainer" parent="."]
offset_left = 84.0
offset_top = 145.0
offset_right = 124.0
offset_bottom = 185.0
columns = 4

[node name="LoadROM" type="Button" parent="."]
visible = false
offset_left = 106.0
offset_top = 296.0
offset_right = 194.0
offset_bottom = 327.0
text = "Load ROM"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 73.0
offset_top = 299.0
offset_right = 225.0
offset_bottom = 330.0
theme_override_fonts/font = ExtResource("3_cpr0p")
theme_override_font_sizes/font_size = 12

[connection signal="pressed" from="LoadROM" to="." method="_on_load_rom_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
